<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/settingsTopMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_dark_color"
        android:orientation="horizontal">

        <Button
            android:id="@+id/settingsMenuNowIsPlaying"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/category_now_is_playing"
            android:text="@string/now_playing_name"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/settingsMenuAlbums"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/category_albums"
            android:text="@string/albums_name"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollViewOfArtist"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <SearchView
                android:id="@+id/searchViewForArtist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:iconifiedByDefault="true"
                android:queryHint="Search" />

            <!-- Start the section of Artists -->
            <ListView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="365dp"
                android:orientation="vertical"
                tools:context=".ArtistActivity" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:text="@string/artist_screen_description" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>