<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NowPlaying">

    <LinearLayout
        android:id="@+id/settingsTopMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_dark_color"
        android:orientation="horizontal">

        <Button
            android:id="@+id/settingsMenuAlbums"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/category_albums"
            android:text="@string/albums_name"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/settingsMenuArtist"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/category_artists"
            android:text="@string/artist_name"
            android:textColor="@android:color/white" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/little_margin"
            android:orientation="vertical"
            android:padding="@dimen/little_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="@dimen/little_margin"
                android:text="@string/current_song_name"
                android:textSize="@dimen/size_of_name_current_song"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/songTimeCurrent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/start_time_of_song"
                    android:textStyle="bold" />

                <SeekBar
                    android:id="@+id/seekBar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8" />

                <TextView
                    android:id="@+id/songTimeEnd"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/end_time_of_song"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="3"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:scaleType="centerInside"
            android:src="@drawable/arbovirus" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/little_margin"
            android:layout_marginRight="@dimen/little_margin"
            android:text="@string/now_is_playing_screen_descriptions" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.9"
        android:background="@color/primary_dark_color"
        android:orientation="vertical"
        android:padding="@dimen/little_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/volumeDownIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/ic_volume_down_white_24dp" />

            <SeekBar
                android:id="@+id/volumeBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="10" />

            <ImageView
                android:id="@+id/volumeUpIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/ic_volume_up_white_24dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/previousSongButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/primary_color"
                android:src="@drawable/ic_skip_previous_white_24dp" />

            <ImageButton
                android:id="@+id/playSongButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/primary_color"
                android:src="@drawable/ic_play_arrow_white_24dp" />

            <ImageButton
                android:id="@+id/nextSongButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/primary_color"
                android:src="@drawable/ic_skip_next_white_24dp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>