<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/settingsTopMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_dark_color"
        android:orientation="horizontal">

        <Button
            android:id="@+id/settingsMenuNowIsPlaying"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/category_now_is_playing"
            android:text="@string/now_playing_name"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/settingsMenuArtist"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/category_artists"
            android:text="@string/artist_name"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/little_margin"
            android:layout_weight="1"
            android:background="@color/accent_color"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/coverOfAlbum1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/little_margin"
                android:src="@drawable/arbovirus" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/little_margin"
                android:layout_marginLeft="@dimen/little_margin"
                android:layout_marginRight="@dimen/little_margin"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nameOfBand1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/awolnation_band_name"
                    android:textSize="@dimen/size_title_of_album"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/run_album"
                    android:textSize="@dimen/size_title_of_song"
                    android:textStyle="italic" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/addToPlayListAlbumOne"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="@color/primary_color"
                        android:src="@drawable/ic_playlist_add_white_18dp" />

                    <ImageButton
                        android:id="@+id/playAlbum1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="@color/primary_color"
                        android:src="@drawable/ic_play_arrow_white_18dp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@color/accent_color"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/little_margin"
                android:src="@drawable/lrb" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/little_margin"
                android:layout_marginLeft="@dimen/little_margin"
                android:layout_marginRight="@dimen/little_margin"
                android:gravity=""
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/abney_park_band_name"
                    android:textSize="@dimen/size_title_of_album"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lost_horizons_album_name"
                    android:textSize="@dimen/size_title_of_song"
                    android:textStyle="italic" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/addToPlayListAlbumTwo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="@color/primary_color"
                        android:src="@drawable/ic_playlist_add_white_18dp" />

                    <ImageButton
                        android:id="@+id/playAlbum2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="@color/primary_color"
                        android:src="@drawable/ic_play_arrow_white_18dp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>